[package]
name = "janus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
clap = "2"
bcrypt = "0.10.0"  # veya en son sürüm numarasını belirtin
base64 = "0.13.0" 

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]