[package]
name = "janus"
version = "0.1.0"
edition = "2021"


[dependencies]
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
clap = "2"
bcrypt = "0.10.0"  
base64 = "0.13.0" 

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",               
    "fast-rng",         
    "macro-diagnostics", 
]